--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/highcharts": "^7.0.0",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vue2-highcharts": "^1.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
